cmake_minimum_required(VERSION 3.27)
project(CTDL_GT C)

set(CMAKE_C_STANDARD 11)

add_executable(CTDL_GT main.c
        "Session 2/Bt1.c"
        "Session 2/bt2.c"
        "Session 2/bt3.c"
        "Session 2/bt4.c"
        "Session 2/bt5.c"
        "Session 2/bt6.c"
        Session3/bt1.c
        Session3/bt2.c
        Session3/bt3.c
        Session3/bt4.c
        Session3/bt5.c
)
