cmake_minimum_required(VERSION 3.27)
project(CTDL_GT C)

set(CMAKE_C_STANDARD 11)

add_executable(CTDL_GT main.c
        "Session2/Bt1.c"
        "Session2/bt2.c"
        "Session2/bt3.c"
        "Session2/bt4.c"
        "Session2/bt5.c"
        "Session2/bt6.c"
        Session3/bt1.c
        Session3/bt2.c
        Session3/bt3.c
        Session3/bt4.c
        Session3/bt5.c
        Session3/bt6.c
        Session4/bt1.c
        Session4/bt2.c
        Session4/bt3.c
        Session4/bt4.c
        Session4/bt5.c
        Session5/bt1.c
        Session5/bt3.c
        Session5/bt4.c
        Session5/bt5.c
        Session6/bt1.c
        Session6/bt2.c
        Session6/bt3.c
        Session6/bt4.c
        Session7/bt1.c
        Session7/bt2.c
        Session7/bt3.c
        Session7/bt4.c
        Session7/bt5.c
        Session7/bt6.c
        Session8/bt1.c
        Session8/bt2.c
        Session8/bt3.c
        Session8/bt4.c
        Session8/bt5.c
        Session8/bt6.c
        Session9/bt1.c
)
